# kedro-kaggle-dataset

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  mypy.ini  pyproject.toml  tox.ini
.github/workflows/: test.yml
docs/source/: conf.py
src/kedro_kaggle_dataset/: __init__.py  kaggle_dataset.py  kaggle_fs.py
tests/: test_import.py
